--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "@iyi-su/microservice",
-  "version": "0.0.3",
-  "main": "main.js",
+  "version": "0.0.0",
+  "main": "service.js",
   "license": "MIT",
   "type": "module",
-  "types": "main.d.ts",
   "bin": {
     "microservice": "main.js"
   },
@@ -21,8 +20,15 @@
     "@types/winston": "^2.4.4",
     "typescript": "^4.8.4"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "files": [
     "main.js",
-    "main.d.ts"
+    "main.ts",
+    "service.js",
+    "service.ts",
+    "paths.js",
+    "paths.ts"
   ]
 }
