--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,9 @@ jobs:
           registry-url: https://npm.pkg.github.com/
       - run: yarn install --frozen-lockfile
       - run: yarn build
+      - run: |
+          git config --global user.name 'actions-release'
+          git config --global user.email 'skamenetskiy@users.noreply.github.com'
       - run: yarn version --patch
       - run: yarn publish
         env:
