--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ jobs:
           registry-url: https://npm.pkg.github.com/
       - run: yarn install --frozen-lockfile
       - run: yarn build
-      - run: yarn version --no-git-tag-version --no-commit-hooks ${{ github.ref_name}}
+      - run: yarn version --no-git-tag-version --no-commit-hooks --new-version ${{ github.ref_name}}
       - run: yarn publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
