Revert "experiment with removing ts from package"
This reverts commit 85a9180fe5e63aea2024cf84839921a8a9e7527e.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   },
   "files": [
     "main.js",
+    "main.ts",
     "service.js",
-    "paths.js"
+    "service.ts",
+    "paths.js",
+    "paths.ts"
   ]
 }
